Fixed a CSS issue where text was too light in the Firefox browser.

--- a/css/rcv-styles.css
+++ b/css/rcv-styles.css
@@ -29,7 +29,7 @@ body { background-color: #3a3a41; font-family: sans-serif; font-size: 110%; }
 
 h1.site-title { color: #ff8900; font-size: 2em; }
 h2 { font-size: 1.75em; margin-bottom: 0.75em; }
-h2.book-title { text-align: center; text-transform: uppercase; margin: 0; }
+h2.book-title {  color: black; text-align: center; text-transform: uppercase; margin: 0; }
 h3 { font-size: 1.5em; }
 h3.caps { text-transform: uppercase; }
 h4 { color: #3a3a41; font-size: 1.25em; }
@@ -53,7 +53,7 @@ a:link, a:visited { color: #3a3a41; }
 
 footer { font-size: 0.9em; }
 
-section { border: 1px solid #3a3a41; border-radius: 10px; margin: 10px 0;
+section { border: 1px solid #3a3a41; border-radius: 10px; margin: 10px 0; color: black;
     padding: 0px 0.5em; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
 
 sup.icon { color: #b4b4b4; font-size: 0.75em; vertical-align: baseline;
